# ZZHcompiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Tast.sh  Tback.sh  Tgetir.sh  Tir.sh  ir1.txt  main.cpp  run-asm.sh
2023/: back2.sh  minicrun.sh
2023/function/: 000_main.s  001_var_defn2.s  002_var_defn3.s  003_arr_defn2.s  004_arr_defn3.c  004_arr_defn3.s  005_arr_defn4.c  005_arr_defn4.s  006_const_var_defn2.s  007_const_var_defn3.s  008_const_array_defn.c  008_const_array_defn.s  009_func_defn.s  010_var_defn_func.s  011_add2.s  012_addc.s  013_sub2.s  014_subc.s  015_mul.s  016_mulc.s  017_div.s  018_divc.s  019_mod.s  020_rem.s  034_arr_expr_len.c  040_unary_op.s  041_unary_op2.s  042_empty_stmt.s  043_logi_assign.s  044_stmt_expr.s  045_comment1.s  046_hex_defn.s  047_hex_oct_add.s  048_assign_complex_expr.s  049_if_complex_expr.s  050_short_circuit.s  051_short_circuit3.ir  052_scope.s  053_scope2.s  054_hidden_var.c  (+98 more)
DragonIR/: IRCode.cpp  IRCode.h  IRGenerator.cpp  IRGenerator.h  IRInst.cpp  IRInst.h  IROptimization.cpp  IROptimization.h
backend/: CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorAsm.cpp  CodeGeneratorAsm.h
backend/arm32/: CodeGeneratorArm32.cpp  CodeGeneratorArm32.h  ILocArm32.cpp  ILocArm32.h  InstSelectorArm32.cpp  InstSelectorArm32.h  PlatformArm32.cpp  PlatformArm32.h
backend/simulation/: CodeSimulator.cpp  CodeSimulator.h
common/: Function.cpp  Function.h  SymbolTable.cpp  SymbolTable.h  Value.cpp  Value.h  ValueType.cpp  ValueType.h  common.cpp  common.h  function.cpp  function.h  symboltable.cpp  symboltable.h  type.cpp  type.h  value.cpp  value.h
frontend/: AST.cpp  AST.h  AttrType.h  FrontEndExecutor.h  Graph.cpp  Graph.h  ast.cpp  ast.h  graph.cpp  graph.h
frontend/antlr4/: .clang-tidy  .clang-tidy-ignore  Antlr4CSTVisitor.cpp  Antlr4Executor.cpp  Antlr4Executor.h  Calculator.g4  Calculator.interp  CalculatorBaseVisitor.cpp  CalculatorBaseVisitor.h  CalculatorCSTVisitor.cpp  CalculatorCSTVisitor.h  CalculatorLexer.cpp  CalculatorLexer.h  CalculatorParser.cpp  CalculatorParser.h  CalculatorVisitor.cpp  CalculatorVisitor.h
frontend/antlr4/autogenerated/: Calculator.tokens  CalculatorLexer.cpp  CalculatorLexer.h  CalculatorVisitor.cpp  CalculatorVisitor.h
frontend/antlr4/autogerated/: CalculatorBaseVisitor.cpp  CalculatorBaseVisitor.h  CalculatorLexer.interp  CalculatorParser.cpp  CalculatorParser.h
frontend/flexbison/: .clang-tidy  .clang-tidy-ignore  BisonParser.h  Calculator.l  Calculator.y  CalculatorBison.cpp  CalculatorBison.h  CalculatorFlex.cpp  CalculatorFlex.h  FlexBisonExecutor.cpp  FlexBisonExecutor.h  FlexLexer.h  bison_parser.h  calculator.l  calculator.y  calculator_lex.cpp  calculator_lex.h  calculator_yacc.cpp  calculator_yacc.h  flex_lexer.h  lex.yy.c
frontend/flexbison/autogenerated/: CalculatorBison.cpp  CalculatorBison.h  CalculatorFlex.cpp  CalculatorFlex.h
frontend/flexbison/autogerated/: CalculatorBison.cpp  CalculatorBison.h  CalculatorFlex.cpp  CalculatorFlex.h
frontend/recursivedescent/: CalculatorRDFlex.cpp  CalculatorRDFlex.h  CalculatorRDParser.cpp  CalculatorRDParser.h  RecursiveDescentExecutor.cpp  RecursiveDescentExecutor.h
reference/: arrays.c  def.c
tests/: test1-1.c  test1.txt  test2-1.c  test2.txt  test3.txt
tools/: Dockerfile  Dockerfile.txt  docker.md  linuxdev.sh  msys2.sh  ubuntu.sh
tools/.ssh/: id_rsa  id_rsa.pub
tools/vscode/: extensions.txt  setttings.json
utils/: getopt-port.cpp  getopt-port.h
